Init dataset dir

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Exclude dataset data
+datasets/*
+!datasets/datasets.md
+
 # Created by https://www.toptal.com/developers/gitignore/api/python,pycharm,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,pycharm,visualstudiocode
 
