--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Exclude dataset data
 datasets/*
 !datasets/datasets.md
+# Do not exclude specific test files
+!datasets/midi_test_files/
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,pycharm,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,pycharm,visualstudiocode
