--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-tensorflow
-numpy
-mido
-tqdm
-scikit-learn
+tensorflow~=2.16.1
+numpy~=1.26.4
+mido~=1.3.2
+tqdm~=4.66.4
+scikit-learn~=1.4.2
+h5py~=3.11.0
+requests~=2.31.0
+pandas~=2.2.2
