--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-torch
-torchvision
-torchaudio
+torch~=2.3.0
 numpy~=1.26.4
 mido~=1.3.2
 tqdm~=4.66.4
 scikit-learn~=1.4.2
 h5py~=3.11.0
-requests~=2.31.0
 pandas~=2.2.2
 matplotlib~=3.9.0
+aubio~=0.4.9
+seaborn~=0.13.2
+PyAudio~=0.2.14
+tensorflow~=2.16.1
