--- a/.gitignore
+++ b/.gitignore
@@ -323,3 +323,4 @@ pyrightconfig.json
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/python,pycharm,visualstudiocode
+/.idea/other.xml
