--- a/.gitignore
+++ b/.gitignore
@@ -327,3 +327,6 @@ pyrightconfig.json
 
 # ignore saved Transformer models + midi files
 # /transformer_decoder_training/saved_files/
+
+# ignore checkpoint files
+transformer_decoder_training/saved_files/**/*checkpoints*/
