remove .pth files

--- a/.gitignore
+++ b/.gitignore
@@ -328,5 +328,7 @@ pyrightconfig.json
 # ignore saved Transformer models + midi files
 # /transformer_decoder_training/saved_files/
 
-# ignore checkpoint files
+# ignore checkpoint files + finished model files
 transformer_decoder_training/saved_files/**/*checkpoints*/
+transformer_decoder_training/saved_files/**/*.pth
+
